Fixing overflow

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -7,6 +7,7 @@
     justify-content: space-between;
     height: 70px;
     width: 100%;
+    grid-column: 1/-1;
 
     .logo{
         width: 92px;
