--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,4 +52,5 @@ a {
   min-height: 100vh;
   display: grid;
   grid-template-rows: max-content;
+  grid-template-columns: 263px auto;
 }
